--- a/less/custom.less
+++ b/less/custom.less
@@ -1,37 +1,16 @@
-@maincolor: #000;
-@navtext : #fff;
-.container{margin:2em auto;background:transparent;padding:1em}#logo{text-align:center;background:transparent;padding:1em;width:10em;height:5em;margin:3em auto 5em;display:block}.center{float:none;margin:0 auto;text-align:center}.center-h1{float:none;margin:0 auto;text-align:center;margin:1em auto;font-family:'Alegreya Sans SC',sans-serif;font-weight:bold}.center-h2{float:none;margin:0 auto;text-align:center;margin:2em auto}.btn-signup{display:block;width:15em;height:5em;margin:auto auto 1em}.btn-signin{display:block;margin:auto auto 1em}#logo a{font-size:4em;color:green}#logo a:hover{text-decoration:none}.col-md-4 span{font-size:3em;margin:auto auto 1em}
+/* -------- Variables ----------- */
 
-footer {
-	background: #333;
-	color: #f1f1f1;
-	padding: .6em;
-	margin: 3em auto auto;
-	text-align: center;
-	position: absolute;
-	width: 100%;
-	left: 0;
+@mainColor : #3399ff;
+
+@white: #fff;
+
+/* CSS Starts from Here*/
+
+body{
+	background: @mainColor;
 }
 
-.navbar-nav.navbar-right:last-child{margin-right:0}.signup{display:block;margin:2em auto auto}.margin-1-b{margin-bottom:1em}.logged-logo{margin:0!important}.text-center p{font-size:13px;font-family:'verdana';font-weight:100;text-align:justify}.place-list.row.place{background:transparent;padding:.5em;margin:1em 0;-webkit-transition:background.4s ease,box-shadow.4s ease;-moz-transition:background.4s ease,box-shadow.4s ease;-ms-transition:background.4s ease,box-shadow.4s ease;-o-transition:background.4s ease,box-shadow.4s ease;transition:background.4s ease,box-shadow.4s ease;border-radius:.1em;box-shadow:0 0 0#f1f1f1}.place-list.row.place:hover{background:#fff;box-shadow:0 0 7px#949494;cursor:pointer}.img-circle{width:200px;height:200px;}.hotel-card{text-decoration:none;color:#333;text-align:justify;}.single img{width:200px;height:200px}
-
-.details(@float: none){float: @float!important;width:inherit!important;margin:0 auto!important;background: transparent;padding:0.3em 0em 0.1em 0.5em;box-shadow:0px 4px 0px#E0E0E0;}
-.details-left{.details(left);}
-.details-left img {margin: 0em 0em 2em 0em;}
-.details-right{.details(right);}
-.details-center p{text-align:left;}
-.map{background: transparent;float:none; width:inherit;margin: 0 auto;}
-.map img{background: #f1f1f1;width:560px; height:460px;}
-
-.navbar-inverse {
-background-color: @maincolor;
-border-color: @maincolor;
-}
-
-.navbar-inverse .navbar-brand {
-	color: @navtext;
-}
-
-.navbar-inverse .navbar-nav>li>a {
-	color: @navtext;
+.container{
+	margin:2em auto;
+	background: darken(@white, 10%);padding:1em
 }
